// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventMapPreview /> should render  when illustration not displayed 1`] = `
<EventMapPreviewstyle__EventMapPreviewContainer>
  <Card>
    <Relay(EventImage)
      enabled={false}
      event={
        Object {
          " $fragmentRefs": null,
          " $refType": null,
          "author": Object {
            " $fragmentRefs": null,
          },
          "googleMapsAddress": Object {
            " $fragmentRefs": null,
            "__typename": "GoogleMapsAddress",
          },
          "id": "1",
          "timeRange": Object {
            "startAt": "2030-03-10 00:00:00",
          },
          "title": "Lorem ipsum dolor sit amet, consectetur adipiscing.",
          "url": "#",
        }
      }
    />
    <Body>
      <Title
        tagName="h3"
      >
        <a
          href="#"
          title="Lorem ipsum dolor sit amet, consectetur adipiscing."
        >
          <Text
            as="div"
            m={0}
            truncate={100}
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing.
          </Text>
        </a>
      </Title>
      <TagsList
        className="eventPreviewTagsList"
      >
        <span
          className="userTagContainer"
        >
          <Relay(TagUser)
            size="xs"
            user={
              Object {
                " $fragmentRefs": null,
              }
            }
          />
        </span>
        <Date
          fontSize="14px"
          startDate="2030-03-10 00:00:00"
        />
        <span
          className="cityTagContainer"
        >
          <Relay(TagCity)
            address={
              Object {
                " $fragmentRefs": null,
                "__typename": "GoogleMapsAddress",
              }
            }
            size="16px"
          />
        </span>
      </TagsList>
    </Body>
  </Card>
</EventMapPreviewstyle__EventMapPreviewContainer>
`;

exports[`<EventMapPreview /> should render correctly 1`] = `
<EventMapPreviewstyle__EventMapPreviewContainer>
  <Card>
    <Relay(EventImage)
      enabled={true}
      event={
        Object {
          " $fragmentRefs": null,
          " $refType": null,
          "author": Object {
            " $fragmentRefs": null,
          },
          "googleMapsAddress": Object {
            " $fragmentRefs": null,
            "__typename": "GoogleMapsAddress",
          },
          "id": "1",
          "timeRange": Object {
            "startAt": "2030-03-10 00:00:00",
          },
          "title": "Lorem ipsum dolor sit amet, consectetur adipiscing.",
          "url": "#",
        }
      }
    />
    <Body>
      <Title
        tagName="h3"
      >
        <a
          href="#"
          title="Lorem ipsum dolor sit amet, consectetur adipiscing."
        >
          <Text
            as="div"
            m={0}
            truncate={100}
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing.
          </Text>
        </a>
      </Title>
      <TagsList
        className="eventPreviewTagsList"
      >
        <span
          className="userTagContainer"
        >
          <Relay(TagUser)
            size="xs"
            user={
              Object {
                " $fragmentRefs": null,
              }
            }
          />
        </span>
        <Date
          fontSize="14px"
          startDate="2030-03-10 00:00:00"
        />
        <span
          className="cityTagContainer"
        >
          <Relay(TagCity)
            address={
              Object {
                " $fragmentRefs": null,
                "__typename": "GoogleMapsAddress",
              }
            }
            size="16px"
          />
        </span>
      </TagsList>
    </Body>
  </Card>
</EventMapPreviewstyle__EventMapPreviewContainer>
`;

exports[`<EventMapPreview /> should render correctly when no date 1`] = `
<EventMapPreviewstyle__EventMapPreviewContainer>
  <Card>
    <Relay(EventImage)
      enabled={true}
      event={
        Object {
          " $fragmentRefs": null,
          " $refType": null,
          "author": Object {
            " $fragmentRefs": null,
          },
          "googleMapsAddress": Object {
            " $fragmentRefs": null,
            "__typename": "GoogleMapsAddress",
          },
          "id": "1",
          "timeRange": Object {
            "startAt": null,
          },
          "title": "Lorem ipsum dolor sit amet, consectetur adipiscing.",
          "url": "#",
        }
      }
    />
    <Body>
      <Title
        tagName="h3"
      >
        <a
          href="#"
          title="Lorem ipsum dolor sit amet, consectetur adipiscing."
        >
          <Text
            as="div"
            m={0}
            truncate={100}
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing.
          </Text>
        </a>
      </Title>
      <TagsList
        className="eventPreviewTagsList"
      >
        <span
          className="userTagContainer"
        >
          <Relay(TagUser)
            size="xs"
            user={
              Object {
                " $fragmentRefs": null,
              }
            }
          />
        </span>
        <span
          className="cityTagContainer"
        >
          <Relay(TagCity)
            address={
              Object {
                " $fragmentRefs": null,
                "__typename": "GoogleMapsAddress",
              }
            }
            size="16px"
          />
        </span>
      </TagsList>
    </Body>
  </Card>
</EventMapPreviewstyle__EventMapPreviewContainer>
`;

exports[`<EventMapPreview /> should render correctly when no googleMapsAddress 1`] = `
<EventMapPreviewstyle__EventMapPreviewContainer>
  <Card>
    <Relay(EventImage)
      enabled={true}
      event={
        Object {
          " $fragmentRefs": null,
          " $refType": null,
          "author": Object {
            " $fragmentRefs": null,
          },
          "googleMapsAddress": null,
          "id": "1",
          "timeRange": Object {
            "startAt": "2030-03-10 00:00:00",
          },
          "title": "Lorem ipsum dolor sit amet, consectetur adipiscing.",
          "url": "#",
        }
      }
    />
    <Body>
      <Title
        tagName="h3"
      >
        <a
          href="#"
          title="Lorem ipsum dolor sit amet, consectetur adipiscing."
        >
          <Text
            as="div"
            m={0}
            truncate={100}
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing.
          </Text>
        </a>
      </Title>
      <TagsList
        className="eventPreviewTagsList"
      >
        <span
          className="userTagContainer"
        >
          <Relay(TagUser)
            size="xs"
            user={
              Object {
                " $fragmentRefs": null,
              }
            }
          />
        </span>
        <Date
          fontSize="14px"
          startDate="2030-03-10 00:00:00"
        />
        <span
          className="cityTagContainer"
        />
      </TagsList>
    </Body>
  </Card>
</EventMapPreviewstyle__EventMapPreviewContainer>
`;
